--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -197,7 +197,9 @@
           {% if messages %}
             <div class="flash-messages">
               {% for category, message in messages %}
+                {% if category != 'duplicate_warning' %}
                 <div class="flash {{ category }}">{{ message }}</div>
+                {% endif %}
               {% endfor %}
             </div>
           {% endif %}
