feat: Centralize `Next_Project` calculation in `achievements_utils` and make it read-only for users.

--- a/app/templates/_contact_modal.html
+++ b/app/templates/_contact_modal.html
@@ -76,7 +76,7 @@
             </tr>
             <tr>
                 <td><label for="next_project">Next Project:</label></td>
-                <td><input type="text" id="next_project" name="next_project" placeholder="e.g., PM1.1" /></td>
+                <td><input type="text" id="next_project" name="next_project" readonly placeholder="Calculated from logs" /></td>
             </tr>
             <tr>
                 <td><label for="credentials">Credentials:</label></td>
