--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -88,8 +88,8 @@
           <sup class="dtm-superscript">DTM</sup>
           {% endif %}
         </td>
-        <td>{{ contact.Type }}</td>
-        <td>{{ contact.Club }}</td>
+        <td>{{ contact.Type if contact.Type else '-' }}</td>
+        <td>{{ contact.Club if contact.Club else '-' }}</td>
         <td>
             <div class="participation-container">
                 <a href="{{ url_for('speech_logs_bp.show_speech_logs', speaker_id=contact.id) }}" 
@@ -106,9 +106,9 @@
                 </a>
             </div>
         </td>
-        <td>{{ contact.credentials if contact.credentials else '' }}</td>
-        <td>{{ contact.Completed_Paths }}</td>
-        <td>{{ contact.Next_Project if contact.Next_Project else '' }}</td>
+        <td>{{ contact.credentials if contact.credentials else '-' }}</td>
+        <td>{{ contact.Completed_Paths if contact.Completed_Paths else '-' }}</td>
+        <td>{{ contact.Next_Project if contact.Next_Project else '-' }}</td>
         {% if is_authorized('CONTACT_BOOK_EDIT') %}
         <td>
           <div class="action-links">
